# Emulator6502

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml  unit_test.yml
lib/: CMakeLists.txt
lib/CPU/: CMakeLists.txt
lib/CPU/include/: CPU.h
lib/CPU/src/: CPU.c
lib/Memory/: CMakeLists.txt
lib/Memory/include/: Memory.h
lib/Memory/src/: Memory.c
main/: CMakeLists.txt  main.c
test/: CMakeLists.txt
test/test_CPU/: CMakeLists.txt  test_CPU.c
test/test_Memory/: CMakeLists.txt  test_Memory.c
test/test_main/: CMakeLists.txt  test_main.c
